--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,37 @@ body {
     background-color: #ffffff;
 }
 
+h1,h2,h3,h4,h5,h6,p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 ul {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 a {
     text-decoration: none;
 }
 
+.container {
+max-width: 1158px;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
+}
+
 /* ======HEADER======== */
+
+.header {
+padding-top: 24px;
+padding-bottom: 24px;
+border-bottom: 1px solid #E7E9FC;
+background: #FFF;
+}
 
 
 .header-logo {
@@ -65,8 +87,11 @@ color: #404BBF;
 /* ======SECTION-HERO======== */
 
 .section-hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
     background: #2e2f42;
 }
+
 
 .section-hero-title {
 color: #FFF;
@@ -74,6 +99,7 @@ text-align: center;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
+margin-bottom: 48px;
 }
 
 .section-hero-button {
@@ -86,6 +112,7 @@ letter-spacing: 0.02em;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 .section-hero-button:hover {
@@ -100,7 +127,23 @@ background-color: #404BBF;
 
 /* ==========SECTION-GOALS========== */
 
+.section-goals {
+padding-top: 120px;
+padding-bottom: 120px;
+background: #FFF;
+}
+
 .section-goals-title {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 color: #2E2F42;
 text-align: center;
 font-size: 36px;
@@ -115,6 +158,7 @@ font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
+margin-bottom: 8px;
 }
 
 .section-goals-text {
@@ -131,6 +175,8 @@ letter-spacing: 0.02em;
 
 .team {
 background-color: #F4F4FD;
+padding-top: 120px;
+padding-bottom: 120px;
 }
 
 .team-title {
@@ -140,10 +186,15 @@ font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
+margin-bottom: 72px;
 }
 
 .team-item {
 background-color: #FFFFFF 
+}
+
+.team-img {
+margin-bottom: 32px;
 }
 
 .team-name {
@@ -152,6 +203,7 @@ background-color: #FFFFFF
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .team-text {
@@ -159,11 +211,17 @@ background-color: #FFFFFF
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-bottom: 32px;
 }
 
 /* ==================== */
 
 /* =========SECTION-PORTFOLIO=========== */
+
+.portfolio {
+padding-top: 120px;
+padding-bottom: 120px;
+}
 
 .portfolio-title {
     color: #2E2F42;
@@ -172,6 +230,7 @@ background-color: #FFFFFF
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .portfolio-name {
@@ -195,6 +254,8 @@ background-color: #FFFFFF
 
 .footer {
 background: #2E2F42;
+padding-top: 100px;
+padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -206,6 +267,7 @@ background: #2E2F42;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-bottom: 16px;
 }
 
 .footer-studio {
@@ -219,6 +281,9 @@ background: #2E2F42;
 }
 
 .footer-text {
+    display: block;
+    width: 264px;
+    height: 72px;
     color: #F4F4FD;
     font-size: 16px;
     line-height: 1.5;
