--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,8 @@ h1,h2,h3,h4,h5,h6,p {
 
 ul {
     list-style: none;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
+    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -21,21 +20,31 @@ a {
 }
 
 .container {
-max-width: 1158px;
-padding-left: 15px;
-padding-right: 15px;
+width: 1158px;
+padding: 0 15px;
 margin: 0 auto;
+}
+
+.header-container {
+display: flex;
+align-items: center;
 }
 
 /* ======HEADER======== */
 
 .header {
-padding-top: 24px;
-padding-bottom: 24px;
 border-bottom: 1px solid #E7E9FC;
-background: #FFF;
 }
 
+.header-navigation {
+    display: flex;
+    align-items: center;
+}
+
+.header-menu-list {
+    display: flex;
+    gap: 40px;
+}
 
 .header-logo {
 color: #4D5AE5;
@@ -45,11 +54,13 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-right: 76px;
 }
 
 .studio {
 color: #2E2F42;
 }
+
 
 .header-menu-link {
 color: #2E2F42;
@@ -57,6 +68,8 @@ font-size: 16px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
+padding: 24px 0;
+display: block;
 }
 
 .header-menu-link:hover,
@@ -66,7 +79,13 @@ letter-spacing: 0.02em;
 
 
 address {
-font-style: normal
+font-style: normal;
+margin-left: auto;
+}
+
+.address-list {
+    display: flex;
+    gap: 40px;
 }
 
 .address-link {
@@ -87,9 +106,8 @@ color: #404BBF;
 /* ======SECTION-HERO======== */
 
 .section-hero {
-    padding-top: 188px;
-    padding-bottom: 188px;
     background: #2e2f42;
+    padding: 188px 0;
 }
 
 
@@ -152,6 +170,15 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 }
 
+.section-goals-list {
+    display: flex;
+}
+
+.section-goals-item {
+    padding: 120px 0;
+    margin-right: 24px;
+}
+
 .section-goals-item-title {
 color: #2E2F42;
 font-size: 20px;
@@ -165,7 +192,7 @@ margin-bottom: 8px;
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02em;    
+    letter-spacing: 0.02em;
 }
 
 
@@ -177,6 +204,11 @@ margin-bottom: 8px;
 background-color: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .team-title {
@@ -199,6 +231,7 @@ margin-bottom: 32px;
 
 .team-name {
     color: #2E2F42;
+    text-align: center;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -208,6 +241,7 @@ margin-bottom: 32px;
 
 .team-text {
     color: #434455;
+    text-align: center;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
