--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ text-align: center;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
-margin-bottom: 48px;
+margin: 0 auto 48px;
 }
 
 
@@ -142,6 +142,7 @@ margin-bottom: 48px;
     letter-spacing: 0.04em;
     cursor: pointer;
     border-radius: 4px;
+    margin: 0 auto;
 }
 
 .section-hero-button:hover {
@@ -220,7 +221,6 @@ padding-bottom: 120px;
 .team-list {
     display: flex;
     gap: 24px;
-    flex-basis: calc((100% - 72px) / 4)
 }
 
 .team-title {
@@ -234,9 +234,10 @@ margin-bottom: 72px;
 }
 
 .team-item {
-background-color: #FFFFFF 
+background-color: #FFFFFF;
 margin-bottom: 32px;
 border-radius: 0px 0px 4px 4px;
+flex-basis: calc((100% - 72px) / 4)
 }
 
 
@@ -261,7 +262,6 @@ padding: 32px 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
 }
 
 /* ==================== */
@@ -283,11 +283,12 @@ padding-bottom: 120px;
     padding: 32px 16px;
     border-bottom: 1px solid #E7E9FC;
     border-top: none;
+    border: 1px solid #E7E9FC;
 }
 
 .portfolio-item {
     background: #FFF;
-    flex-basis: calc((100% - 48) / 3);
+    flex-basis: calc((100% - 48px) / 3);
 }
 
 .portfolio-title {
